# lizhi-kb

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/icons/: icon.icns
src-tauri/resources/: cc-agent-market.json  cc-skill-market.json
src-tauri/resources/ai-bridge/: channel-manager.js  package.json
src-tauri/resources/ai-bridge/services/: claude-query.js  model-test.js  prompt-enhancer.js
src-tauri/resources/lizhi-mcp/: index.js  package.json
src-tauri/src/: ai_privacy.rs  assets.rs  audit.rs  commands.rs  credentials.rs  db.rs  documents.rs  journal.rs  launch_records.rs  lib.rs  link_index.rs  main.rs  mubu.rs  path_guard.rs  question_bank.rs  requirements.rs  revisions.rs  save_postprocess.rs  search_index.rs  text_util.rs  vault_lock.rs  vault_lockout.rs  writing_styles.rs
src-tauri/src/ai/: agent.rs  config.rs  llm_client.rs  mod.rs  network_gate.rs  rag.rs  secrets.rs  types.rs
src-tauri/src/backup/: archive.rs  merge_docs.rs  mod.rs
src-tauri/src/cc_workbench/: agent_market.rs  bridge_processes.rs  cc_switch.rs  chat_input.rs  claude_md.rs  claude_settings.rs  config.rs  context.rs  git_ops.rs  hooks.rs  market_catalog.rs  mcp_servers.rs  mod.rs  path_utils.rs  paths.rs  process_utils.rs  provider_env.rs  providers.rs  runtime.rs  secrets.rs  skill_market.rs  skills.rs  slash_commands.rs  types.rs  usage.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  mod.rs  sealed_file.rs
src-tauri/src/export/: mod.rs
src-tauri/src/mcp/: auth.rs  config.rs  handlers.rs  mod.rs  paths.rs  runtime.rs  server.rs  standalone.rs
src-tauri/src/prefs/: document_ui.rs  mod.rs
src-tauri/src/vault/: keys.rs  mod.rs  service.rs  session.rs
(+681 files in other folders)
