[package]
name = "lizhi-kb"
version = "0.1.0"
description = "A Tauri App"
authors = ["DuebassLei"]
edition = "2021"
default-run = "lizhi-kb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lizhi_kb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "6"
thiserror = "2"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
subtle = "2"
hex = "0.4"
bip39 = { version = "2", features = ["rand"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
rayon = "1"
tiny_http = "0.12"
fs4 = "0.12"
rpassword = "7"
regex = "1"
once_cell = "1"
pinyin = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "system-proxy", "rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
base64 = "0.22"

[features]
default = ["sqlcipher"]
# Dev fallback only — vault.db 无 SQLCipher 加密，勿用于生产库：
#   cargo build --no-default-features --features plain-sqlite
# Windows：需安装 OpenSSL 并设置 OPENSSL_DIR（见 README）
sqlcipher = ["rusqlite/bundled-sqlcipher"]
plain-sqlite = ["rusqlite/bundled"]
